Fix body + list container styling for correct overflow

--- a/index.css
+++ b/index.css
@@ -3,8 +3,9 @@ body {
   margin: 0;
   padding: 0;
   background-color: #f1f1f1;
-  height: 100vh;
-  width: 99vw;
+  min-height: 100vh;
+  width: 100vw;
+  overflow-x: hidden;
 }
 /* app container */
 .app {
@@ -18,7 +19,7 @@ body {
   margin: 20px 0;
 }
 .app-tasks {
-  padding: 0px 20px;
+  padding: 0px 20px 20px;
   scroll-behavior: smooth;
   scroll-snap-type: x mandatory;
   overflow-x: auto;
@@ -30,6 +31,7 @@ body {
   background: #f9f9f9;
   border: 1px solid #ccc;
   margin: 0;
+  padding: 10px 20px;
 }
 
 /* lists */
